# fastah-dm

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/download/: gdrive.rs  http.rs  manager.rs  mod.rs
src-tauri/src/storage/: mod.rs
src/components/: ConfirmDialog.vue  DownloadItem.vue  DownloadItemNew.vue  FolderSelector.vue  NewDownloadModal.vue  SettingsModal.vue  UpdateModal.vue
src/stores/: downloadStore.ts
